@@ -2,6 +2,10 @@ Calc: Changes
 
 —Update 3
 
+——Revision 8, 12/31/2022.
+- Refactored.
+- Increased undo stack size to 8.
+
 ——Revision 7, 07/25/2022.
 - Edited project subtitle.
 - Updated manual on variables.
